<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sarah.vetapp.MainActivity">

    <Button
        android:id="@+id/fazendas"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/sair"
        android:text="@string/farm"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="227dp"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/tarefasMensais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/monthly_task"
        tools:drawableBottom="@drawable/task"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="183dp"
        android:layout_above="@+id/fazendas"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="86dp" />

        <Button
            android:id="@+id/sair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Exit"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="376dp"
            tools:layout_editor_absoluteY="655dp"
            android:layout_marginBottom="84dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="22dp" />


</android.widget.RelativeLayout>
