<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:background="@color/backgroundGreen"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sarah.vetapp.Activities.PerfilFazendaActivity">


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButtonOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="mini"
        app:srcCompat="?attr/actionModeCloseDrawable"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="611dp" />

    <EditText
        android:id="@+id/editTextPropriedade"
        android:layout_width="341dp"
        android:layout_height="44dp"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="265dp" />

    <EditText
        android:id="@+id/editTextProprietario"
        android:layout_width="341dp"
        android:layout_height="44dp"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="358dp" />

    <TextView
        android:id="@+id/textViewId"
        android:layout_width="341dp"
        android:layout_height="22dp"
        android:text="@string/name_of_owner"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="336dp" />
    <EditText
        android:layout_width="341dp"
        android:layout_height="44dp"
        tools:layout_editor_absoluteY="164dp"
        tools:layout_editor_absoluteX="56dp"
        android:id="@+id/editTextID" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="344dp"
        android:layout_height="25dp"
        android:text="@string/prompt_email"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="447dp" />

    <TextView
        android:id="@+id/textViewPropriedade"
        android:layout_width="339dp"
        android:layout_height="24dp"
        android:text="@string/name_of_farm"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="241dp" />

    <TextView
        android:id="@+id/textViewProprietario"
        android:layout_width="340dp"
        android:layout_height="18dp"
        android:text="@string/id"
        tools:layout_editor_absoluteX="56dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginTop="146dp" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="344dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="472dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="mini"
        app:srcCompat="@android:drawable/ic_menu_edit"
        tools:layout_editor_absoluteX="377dp"
        tools:layout_editor_absoluteY="611dp" />
</android.support.constraint.ConstraintLayout>
